change: 完成基础版和进阶版的功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <!-- Note -->
     <string name="take_a_note">Take a note</string>
     <string name="confirm">Confirm</string>
+    <string name="high_priority">high</string>
+    <string name="medium_priority">medium</string>
+    <string name="low_priority">low</string>
 </resources>
